--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,6 @@
+import Swal from 'sweetalert2/dist/sweetalert2.js'
+import 'sweetalert2/src/sweetalert2.scss'
+
 
 body {
     font-family: Arial, sans-serif;
