--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,60 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .col-logo{
+        @apply 
+    }
+    .logo-tersi{
+        @apply flex relative flex-row w-36 gap-x-2 font-bold text-lg justify-center  bg-white bg-opacity-30 p-2 rounded-lg shadow-lg
+    }
+}
+
+    body {
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        transition: background-image 1s ease-in-out;
+    }
+
+    .background-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        transition: opacity 1s ease-in-out;
+        opacity: 0;
+    }
+
+    .background-image.visible {
+        opacity: 1;
+    }
+
+    /* Styling untuk titik-titik */
+    .dots-container {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .dot {
+        width: 10px;
+        height: 10px;
+        margin: 0 5px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.5);
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    .dot.active {
+        background-color: white;
+    }
